# libxjwt

./: .clang-format  .gitignore  .travis.yml  Makefile.am  Makefile.in  NOTICE  PACKAGES.md  README.md  SConscript  SConstruct  aclocal.m4  buildconf.sh  configure  configure.ac
debian/: README.Debian  changelog  control  copyright
include/xjwt/: xjwt.h  xjwt_error.h  xjwt_keyset.h  xjwt_validator.h  xjwt_visibility.h
rpm/: libxjwt.spec
site_scons/: utils.py
src/: b64.c  error.c  json.c  key.c  key_ec.c  keyset.c  parse.c  validator.c
src/internal/: xjwt_b64.h  xjwt_config.h.in  xjwt_json.h  xjwt_key.h  xjwt_keyset.h  xjwt_parse.h
tests/: SConscript  test_all.c  test_keyset.c  test_split.c  test_verify.c  utils.c  xjwt_tests.h
tests/fixtures/: e1_af.jwt  e1_jwk.json  jwk_af.json  jwk_none.json
